Edited wiki page GenPhyloData through web user interface.

--- a/wiki/GenPhyloData.wiki
+++ b/wiki/GenPhyloData.wiki
@@ -1,5 +1,10 @@
 #summary GenPhyloData tutorial
 
+
+=Work in progress!=
+Please return soon for non-tentative information.
+
+
 =GenPhyloData Tutorial=
 
 JPrIME-GenPhyloData is a suite of tools to generate realistic synthetic (a.k.a _artificial_ or _simulated_) phylogenetic species trees and gene trees. The models used conform well with the inference tools included in JPrIME, but may also support other popular models. Currently, the suite comprises 3 tools:
