--- a/wiki/GenPhyloData.wiki
+++ b/wiki/GenPhyloData.wiki
@@ -59,4 +59,4 @@ It is of course possible to perform multiple rounds of relaxation, should you wi
 ----
 
 ==(4) Producing sequence data==
-If you wish to produce synthetic sequence data for your trees, be it species trees or gene trees, you may use e.g. [http://tree.bio.ed.ac.uk/software/seqgen/ SeqGen], which supports a wide range of models of popular models of molecular sequence evolution for nucleotide, amino acid or codon data. Such programs typically support modelling also indels, gaps, and site rate heterogeneity.
+If you wish to produce synthetic sequence data for your trees, you may use, e.g., [http://tree.bio.ed.ac.uk/software/seqgen/ SeqGen], which supports a wide range of models of popular models of molecular sequence evolution for nucleotide, amino acid or codon data. Such programs typically support modelling also indels, gaps, and site rate heterogeneity.
