--- a/wiki/GenPhyloData.wiki
+++ b/wiki/GenPhyloData.wiki
@@ -36,13 +36,15 @@ You can always show the list of options by typing:
 {{{
 java -jar jprime-x.y.z.jar HostTreeGen -h
 }}}
+The produced trees are rooted. You may of course use an external tool to remove the root to obtain unrooted trees.
+
 
 ----
 
 ==(2) !GuestTreeGen==
 [http://jprime.googlecode.com/files/GuestTreeGen.png]
 
-!GuestTreeGen is a tool to generate bifurcating "guest" trees that evolve over a known "host" tree according to a birth-death-like process. This is particularly well suited for creating realistic artificial gene families in light of a known taxonomy. The user inputs the host tree over which the process should take place, along with duplication, loss, and lateral transfer rates. Lineages which fail to reach the leaves of the host tree are pruned away. There are additional options regarding the desired number of leaves, taxon sampling probability, stem edge, etc.
+!GuestTreeGen is a tool to generate bifurcating "guest" trees that evolve over a known "host" tree according to a birth-death-like process. This is particularly well suited for creating realistic artificial gene families in light of a known taxonomy. The user inputs the host tree over which the process should take place, along with duplication, loss, and lateral transfer rates. The host tree must be rooted and bifurcating. Gust tree lineages which fail to reach the leaves of the host tree are pruned away. There are additional options regarding the desired number of leaves, taxon sampling probability, stem edge, etc.
 
 The general pattern for the tool is thus:
 {{{
@@ -66,7 +68,8 @@ java -jar jprime-x.y.z.jar GuestTreeGen -h
 The trees produced in (1) and (2) are ultrametric (_clock-like_). In order to obtain more realistic branch lengths, this application enables relaxing the molecular clock by rescaling the lengths by heterogeneous rates. A number of popular techniques are supported, including:
   * Uncorrelated models for IID rates drawn from gamma, log-normal and other distributions.
   * Rates drawn uniformly (with replacement) from a list of samples. This is convenient to mimic rates from a posterior distribution stemming from an MCMC analysis.
-  * Auto-correlated rates in accordance with TBD.
+  * Auto-correlated rates in accordance with Thorne-Kishino '98 and some other popular models.
+The input tree must be rooted and bifurcating. Currently, models are employed in a "pure" modeling sense, in that rates that concern the edges around the root follow the model without ad hoc constraints. It is otherwise common to, during inference, introduce root-constraints to avoid over-parametrization.
 
 To execute the application, the general pattern is the following:
 {{{
