--- a/wiki/GenPhyloData.wiki
+++ b/wiki/GenPhyloData.wiki
@@ -23,7 +23,7 @@ The tools of !GenPhyloData are described seperately below.
   * Overriding stem edge.
   * Leaf sizes drawn uniformly (with replacement) from a list of samples. This is convenient to mimic biological data more closely.
   * Requiring an immediate split at the start of the time interval.
-  * Number of attempts to generate a tree that meet the requirements before surrendering.
+  * Number of attempts to generate a tree that meets the requirements before surrendering.
 
 By default, files are produced for both the unpruned and the pruned tree:
   * the tree itself in Newick format.
@@ -60,7 +60,7 @@ This will also force the produced tree to retain this split after pruning, i.e.,
   * Guest leaf sampling probability.
   * Overriding stem edge length.
   * Guest leaf sizes drawn uniformly (with replacement) from a list of samples. This is convenient to mimic biological data more closely.
-  * Number of attempts to generate a tree that meet the requirements before surrendering.
+  * Number of attempts to generate a tree that meets the requirements before surrendering.
 
 By default, files are produced for both the unpruned and the pruned tree:
   * the guest tree itself in Newick format.
